<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

     <EditTextPreference
           android:capitalize="words"
            android:defaultValue="@string/sambaserver"
            android:inputType="textCapWords"
            android:key="sambaserver"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="samba server" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/keukenip"
            android:inputType="textCapWords"
            android:key="ipserver1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="first ip" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/keukendesc"
            android:inputType="textCapWords"
            android:key="nameserver1"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="first description" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/kamerip"
            android:inputType="textCapWords"
            android:key="ipserver2"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="second ip" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/kamerdesc"
            android:inputType="textCapWords"
            android:key="nameserver2"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="second description" />

        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/bankip"
            android:inputType="textCapWords"
            android:key="ipserver3"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="third ip" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/bankdesc"
        android:inputType="textCapWords"
        android:key="nameserver3"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="third description" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/studeerip"
        android:inputType="textCapWords"
        android:key="ipserver4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="fourth ip" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/studeerdesc"
        android:inputType="textCapWords"
        android:key="nameserver4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="fourth description" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/studeerkamerip"
        android:inputType="textCapWords"
        android:key="ipserver5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="fourth ip" />
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/studeerkamerdesc"
        android:inputType="textCapWords"
        android:key="nameserver5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="fourth description" />

</PreferenceScreen>
